# CashFlow

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/transactions/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: CategoriesTable.vue  ConfirmModal.vue  StatusesTable.vue  SubcategoriesTable.vue  TypesTable.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: transactions.js
frontend/src/views/: ReferencesView.vue  TransactionFormView.vue  TransactionsView.vue
